<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/add_bridge_ip"
    android:orientation="vertical"
    android:padding="8dp">

<TextView
    android:text = "@string/addDeviceText"
    android:layout_width="wrap_content"
    android:layout_height = "wrap_content"
    android:id = "@+id/textview"
    android:textSize="20sp" />

<EditText
    android:layout_width = "wrap_content"
    android:layout_height = "wrap_content"
    android:id = "@+id/bridge_ip"
    android:hint = "@string/bridgeHint"
    android:focusable = "true"
    android:textColorHint = "@color/hint"
    android:maxLength="15"
    android:textSize="20sp"
    android:maxLines="1"
    android:inputType="text"

    />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back_button"
        android:layout_marginRight="45dp"
        android:maxLines="1"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_button"
        android:text="@string/confirm"
        android:layout_marginLeft="45dp"
        android:maxLines="1"
        />
</LinearLayout>
</LinearLayout>